# ccd-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  SECURITY.md
.github/workflows/: publish-pypi.yml
docs/: 00-manifest.md  01-overview.md  02-principles.md  03-protocol.md  04-roles-raci.md  05-architecture.md  06-ci-cd-integration.md  07-observability-audit.md  08-governance.md  09-faq.md  DEVELOPMENT_RULES.md  DEVELOPMENT_RULES.md.example  ENGINEERING_LOG.md  ENGINEERING_LOG.md.example  README.md  change-log-template.md  context-update-process.md  development-workflow.md  glossary.md  methodology-loop-guide.md  roadmap.md  roadmap.md.example
docs/checklists/: README.md  ccd-setup.md
docs/decisions/: 001-ccd-architecture.md  002-methodology-loop-integration.md  README.md
docs/examples/: README.md
docs/examples/ai-context-integration/: main.go.example
docs/examples/martlive/: CODEMAP.yaml  README.md  codemap.sample.yaml  development-rules.sample.md  engineering-log.sample.md  index.sample.yaml
docs/examples/martlive/context-cards.sample/: coach_llm.py.ctx.md  main.go.ctx.md
docs/examples/martlive/decisions.sample/: adr-template.sample.md
docs/phases/: README.md  phase-1-mvp.md
docs/playbooks/: README.md  ccd-implementation.md
docs/schemas/: README.md  adr.schema.json  codemap.schema.json  context-card.schema.json  default.schema.json  engineering-log.schema.json  index.schema.json
docs/templates/: README.md  adr-template.md  ai-context-comments.md  codemap.yaml.template  context-card.ctx.md  engineering-log-entry.md
research/: README.md
research/arxiv/: build.sh  paper.tex
site/: README.md  mkdocs.yml
site/docs/: index.md
tools/: README.md
tools/ccd-cli/: PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
tools/ccd-cli/ccd_cli/: cli.py
tools/ccd-cli/ccd_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/ccd-cli/ccd_cli/commands/: ai_context.py  coverage.py  freshness.py  quality.py  version.py
tools/ccd-cli/ccd_cli/core/: __init__.py  context_card.py
tools/ccd-cli/ccd_cli/utils/: metrics_calculator.py
tools/ccd-cli/examples/: __init__.py  ai_context_usage.py  basic_usage.py
tools/ccd-cli/src/ccd_cli/: __init__.py  __main__.py
tools/ccd-cli/src/ccd_cli/commands/: __init__.py  generate.py  health.py  init.py  methodology.py  monitor.py  pack.py  prepare_context.py  validate.py
tools/ccd-cli/src/ccd_cli/core/: codemap.py  module_index.py  project.py
tools/ccd-cli/src/ccd_cli/utils/: __init__.py  config.py  errors.py  file_analyzer.py  git_analyzer.py
tools/ccd-cli/tests/: __init__.py  test_cli.py
